Fix alignment of bookmark svg on hover

--- a/src/styles.css
+++ b/src/styles.css
@@ -370,7 +370,7 @@ footer p {
 }
 
 .word-header button .unhovered {
-  padding-right: 2.63px;
+  padding-right: .15rem;
 }
 
 /* TABS */
